--- a/404.html
+++ b/404.html
@@ -20,5 +20,5 @@ layout: default
   <h1>404</h1>
 
   <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
+  <p>Sorry, this page does not exist. Either it has been removed by mistake or did you misspell the URL? </p>
 </div>
