deploy: 24601bbc7f4e42b71d1101ddb4c787f7e13a3373

--- a/3_biography.html
+++ b/3_biography.html
@@ -126,19 +126,18 @@
  		<div class="col-xs-12 visible-xs"><br></div>
     <div class="col-sm-7">
     <div class="col">
-	  <p><em>Last update: June 5, 2024</em></p>
+	  <p><em>Last update: November 2, 2025</em></p>
 
-<p><em>For my full biography, please refer to my <a href="assets/pdfs/cv_website.pdf">CV</a>.</em></p>
-
-<p>I am currently a starting researcher at the WILLOW team, Inria Paris. Until February 2024, I was a postdoc at the University of Toronto, working with Prof. Tim Barfoot, which I started in March 2022. Before that, I obtained my PhD from the Laboratory of Audiovisual Communications (<a href="https://lcav.epfl.ch"><strong>LCAV</strong></a>) at École polytechnique fédérale de Lausanne (<strong>EPFL</strong>), under the supervision of Prof. Martin Vetterli and Dr. Adam Scholefield.</p>
+<p>I am an incoming assistant professor (January 2026) at Carnegie Mellon University, in the Mechanical Engineering with Courtesy Appointment with the Robotics Institute. Until then, I am working as a starting researcher in the WILLOW team, Inria Paris. Before that, until February 2024, I was a postdoc at the University of Toronto, working with Prof. Tim Barfoot, which I started in March 2022. I obtained my PhD from the Laboratory of Audiovisual Communications (<a href="https://lcav.epfl.ch"><strong>LCAV</strong></a>) at École polytechnique fédérale de Lausanne (<strong>EPFL</strong>), under the supervision of Prof. Martin Vetterli and Dr. Adam Scholefield.</p>
 
 <p>I hold a Master’s degree of Mechnical Engineering with specialization in control and mechatronics from EPFL. I had the opportunity to conduct my Master’s Thesis at the Autonomous Systems Lab (<a href="https://asl.ethz.ch"><strong>ASL</strong></a>) at the Eidgenössische Technische Hochschule Zürich (<strong>ETHZ</strong>), and I performed the third year of my Bachelor studies at the University of <strong>Heriot Watt</strong> in Edinburgh.</p>
 
 <p>In terms of work experience, I had the chance to conduct internships at Disney Research in Los Angeles, ABB Switzerland and Bystronic Laser AG, Switzerland.</p>
 
-<p>For the past few years, I have also been a proud supporter of a few great initiatives in Switzerland. I led the app development team of the <a href="https://vochabular.ch"><strong>voCHabular</strong></a> project, teaching Swiss German for free via a book and app. I helped <a href="https://girlscoding.org"><strong>GirlsCoding</strong></a> with several workshops and public relations. I also gave a workshop on <em>python</em> coding to the students from the <a href="https://powercoders.ch"><strong>PowerCoders</strong></a> program in Berne and I co-supervised the internship project by one student. I am always looking for opportunities to put my knowledge to use for society, please get in touch if you have any ideas or questions!</p>
+<p>For the past few years, I have also been a proud supporter of a few great initiatives in Switzerland. I led the app development team of the <a href="https://vochabular.ch"><strong>voCHabular</strong></a> project, teaching Swiss German for free via a book and app. I helped <a href="https://girlscoding.org"><strong>GirlsCoding</strong></a> with several workshops and public relations. I also gave a workshop on <em>python</em> coding to the students from the <a href="https://powercoders.ch"><strong>PowerCoders</strong></a> program in Berne and I co-supervised the internship project by one student. 
+I am always looking for opportunities to put my knowledge to use for society, please get in touch if you have any ideas or questions!</p>
 
-<p>I am grateful for receiving the <em>Postdoc.Mobility</em> grant from the Swiss National Science Foundation in 2021, the <em>Women Techmaker Scholarship</em> from Google in 2020, the <em>EDIC</em> fellowship from EPFL for the first year of my PhD in 2016, and the <em>NCCR Robotics Scholarship for Women</em> for my Master’s Thesis.</p>
+<p>I have been awarded the <em>Marie Curie Postdoctoral Fellowship</em> from Horizon Europe, the <em>Postdoc.Mobility</em> grant from the Swiss National Science Foundation, the <em>Women Techmaker Scholarship</em> from Google, the <em>EDIC</em> fellowship from EPFL for the first year of my PhD, and the <em>NCCR Robotics Scholarship for Women</em> for my Master’s Thesis.</p>
 
 <p>For more information, do not hesitate to get in touch with me.</p>
 
