deploy: 81e7455dbb1f744222d368f324ba9b13336ab472

--- a/index.html
+++ b/index.html
@@ -143,7 +143,13 @@
 
 <h3 id="latest-news">Latest news</h3>
 
-<p><em>Last update: June 21, 2025.</em></p>
+<p><em>Last update: December 12, 2025.</em></p>
+
+<p><strong>December 2025</strong> I had a blast visiting the LS2N centre in Nantes today; thank you to Clément Moreau for inviting me!</p>
+
+<p><strong>October 2025</strong> Super happy that I could visit Toulouse one last time before leaving for the US; this time with my student Louis, and seeing not only the POP team but also the Gepetto team. Thank you to Didier Henrion, Nicolas Mansard, and Ege Gürsoy, for the warm welcome!</p>
+
+<p><strong>September 2025</strong> Presented at the Journée Nationale de la Recherche Robotique in Rennes. It was great to connect with the French robotics community! Thank you to Justin Carpentier for giving me this opportunity!</p>
 
 <p><strong>June 2025</strong> I was faculty chair for this year’s <a href="https://sites.google.com/view/rsspioneers2025/home?authuser=0">RSS Pioneers workshop</a> in Los Angeles, California. After RSS I am honored to be presenting our latest research at the <a href="https://www.ccdc.ucsb.edu/">CCDC at UC Santa Barbara</a>.</p>
 
