deploy: e4b9978b515e4293fa7688678bd675e8bdfaf5a7

--- a/index.html
+++ b/index.html
@@ -131,15 +131,15 @@
  		<div class="col-xs-12 visible-xs"><br></div>
     <div class="col-sm-7">
     <div class="col">
-	  <p>I am an incoming assistant professor at CMU Mechanical Engineering, with courtesy appointment with the CMU Robotics Institute. My research interest is to make autonomous robots more capable and trustworthy by exploiting recent advances in optimization and artificial intelligence. I am currently a starting researcher in the Willow research group at Inria Paris. Until February 2024, I was a postdoc at the University of Toronto in the Robotics Institute, working with Timothy D. Barfoot on certifiably optimal state estimation. Before that, I obtained my Ph.D. in the AudioVisual Communications Laboratory (LCAV) at École polytechnique fédérale de Lausanne (EPFL) under the supervision of Martin Vetterli and Adam Scholefield, working on non-visual spatial perception.</p>
+	  <p>I am Assistant Professor in Mechanical Engineering, Carnegie Mellon University, and hold a courtesy appointment with the Robotics Institute. My research interest is to make autonomous robots more capable and trustworthy by exploiting recent advances in optimization and artificial intelligence. Until December 2025, I was a starting researcher in the Willow research group at Inria Paris. Until February 2024, I was a postdoc at the University of Toronto in the Robotics Institute, working with Timothy D. Barfoot on certifiably optimal state estimation. Before that, I obtained my Ph.D. in the AudioVisual Communications Laboratory (LCAV) at École polytechnique fédérale de Lausanne (EPFL) under the supervision of Martin Vetterli and Adam Scholefield, working on non-visual spatial perception.</p>
 
 <p><a href="https://scholar.google.com/citations?hl=en&amp;user=45QAZbUAAAAJ">Google Scholar</a> / <a href="https://www.linkedin.com/in/duembgen/">LinkedIn</a></p>
 
 <h3 id="working-with-me">Working with me</h3>
 
-<p><strong>CMU MechE Research Students</strong>: I am happy to co-advise students starting September 2025, if there is a strong fit. Don’t hesitate to get in touch (see below).</p>
+<p>Undergraduate / Master’s Research Students: If you are passionate about optimization for robotics, and would like to work with me in January 2026 or September 2026 semester, please get in touch via e-mail with your CV and a short research statement. You can also browse <a href="https://www.meche.engineering.cmu.edu/education/undergraduate-education/undergraduate-experience/projects/index.html">this page</a> (CMU internal) for open positions.</p>
 
-<p>If you are passionate about optimization for robotics, and would like to work with me at CMU starting January 2026 or September 2026, please get in touch via e-mail with your CV and a short research statement.</p>
+<p>Postdocs: I am always open to interview strong candidates. In particular, if you would like to apply to join my lab with the <a href="https://carnegiebosch.cmu.edu/fellowships/index.html">Carnegie Bosch Institute postdoctoral fellowship</a> (deadline is January 31, 2026), please get in touch.</p>
 
 <h3 id="latest-news">Latest news</h3>
 
