--- a/index.html
+++ b/index.html
@@ -131,49 +131,63 @@
  		<div class="col-xs-12 visible-xs"><br></div>
     <div class="col-sm-7">
     <div class="col">
-	  <p>I am Assistant Professor in Mechanical Engineering, Carnegie Mellon University, and hold a courtesy appointment with the Robotics Institute. My research interest is to make autonomous robots more capable and trustworthy by exploiting recent advances in optimization and artificial intelligence. Until December 2025, I was a starting researcher in the Willow research group at Inria Paris. Until February 2024, I was a postdoc at the University of Toronto in the Robotics Institute, working with Timothy D. Barfoot on certifiably optimal state estimation. Before that, I obtained my Ph.D. in the AudioVisual Communications Laboratory (LCAV) at École polytechnique fédérale de Lausanne (EPFL) under the supervision of Martin Vetterli and Adam Scholefield, working on non-visual spatial perception.</p>
+	  <p>I am an Assistant Professor in Mechanical Engineering at Carnegie Mellon University, with a courtesy appointment in the Robotics Institute.</p>
 
-<p><a href="https://scholar.google.com/citations?hl=en&amp;user=45QAZbUAAAAJ">Google Scholar</a> / <a href="https://www.linkedin.com/in/duembgen/">LinkedIn</a></p>
+<p>My research focuses on making autonomous robots more capable and trustworthy by exploiting recent advances in optimization and artificial intelligence. In particular, I am interested in adopting tools from global optimization to improve sample efficiency of policy learning,  to enable the discovery of reliable solutions even in the face of uncertain or unknown models, and to provide optimality guarantees for difficult non-convex optimization problems.</p>
+
+<p>Previously, I was a researcher in the Willow group at Inria Paris (until December 2025) and a postdoc at the University of Toronto working with Timothy D. Barfoot (until February 2024). I received my Ph.D. from EPFL (LCAV), advised by Martin Vetterli and Adam Scholefield, where I worked on non-visual spatial perception.</p>
+
+<p><strong>Links:</strong> <a href="https://scholar.google.com/citations?hl=en&amp;user=45QAZbUAAAAJ">Google Scholar</a> · <a href="https://www.linkedin.com/in/duembgen/">LinkedIn</a></p>
+
+<hr />
 
 <h3 id="working-with-me">Working with me</h3>
 
-<p>Undergraduate / Master’s Research Students: If you are passionate about optimization for robotics, and would like to work with me in January 2026 or September 2026 semester, please get in touch via e-mail with your CV and a short research statement. You can also browse <a href="https://www.meche.engineering.cmu.edu/education/undergraduate-education/undergraduate-experience/projects/index.html">this page</a> (CMU internal) for open positions.</p>
+<h4 id="undergraduate--masters-students">Undergraduate / Master’s students</h4>
+<p>If you’re excited about <strong>optimization for robotics</strong>, I’m happy to hear from you about research projects in <strong>January 2026</strong> or <strong>September 2026</strong>.<br />
+Please email me with:</p>
+<ul>
+  <li>CV</li>
+  <li>a short research statement (½–1 page)</li>
+</ul>
 
-<p>Postdocs: I am always open to interview strong candidates. In particular, if you would like to apply to join my lab with the <a href="https://carnegiebosch.cmu.edu/fellowships/index.html">Carnegie Bosch Institute postdoctoral fellowship</a> (deadline is January 31, 2026), please get in touch.</p>
+<p>CMU undergraduate students can also browse the following page:<br />
+<a href="https://www.meche.engineering.cmu.edu/education/undergraduate-education/undergraduate-experience/projects/index.html">Undergraduate Experience Projects (CMU internal)</a></p>
+
+<h4 id="postdocs">Postdocs</h4>
+<p>I’m always open to interviewing strong candidates. In particular, if you would like to apply with the <a href="https://carnegiebosch.cmu.edu/fellowships/index.html"><strong>CBI Fellowship</strong></a> (deadline <strong>January 31, 2026</strong>), please get in touch.</p>
+
+<hr />
 
 <h3 id="latest-news">Latest news</h3>
 
-<p><em>Last update: December 12, 2025.</em></p>
+<p><em>Last update: January 8, 2026.</em></p>
 
-<p><strong>December 2025</strong> I had a blast visiting the LS2N centre in Nantes today; thank you to Clément Moreau for inviting me!</p>
+<p><strong>December 2025</strong> I had a blast visiting the LS2N centre in Nantes. Thank you to Clément Moreau for the invitation!</p>
 
-<p><strong>October 2025</strong> Super happy that I could visit Toulouse one last time before leaving for the US; this time with my student Louis, and seeing not only the POP team but also the Gepetto team. Thank you to Didier Henrion, Nicolas Mansard, and Ege Gürsoy, for the warm welcome!</p>
+<p><strong>October 2025</strong> Super happy to visit Toulouse one last time before leaving for the US, this time with my student Louis. It was great to see both the POP and Gepetto teams. Thank you to Didier Henrion, Nicolas Mansard, and Ege Gürsoy for the warm welcome!</p>
 
-<p><strong>September 2025</strong> Presented at the Journée Nationale de la Recherche Robotique in Rennes. It was great to connect with the French robotics community! Thank you to Justin Carpentier for giving me this opportunity!</p>
+<p><strong>September 2025</strong> Presented at the Journée Nationale de la Recherche Robotique in Rennes. It was great to connect with the French robotics community. Thank you to Justin Carpentier for the invitation!</p>
 
-<p><strong>June 2025</strong> I was faculty chair for this year’s <a href="https://sites.google.com/view/rsspioneers2025/home?authuser=0">RSS Pioneers workshop</a> in Los Angeles, California. After RSS I am honored to be presenting our latest research at the <a href="https://www.ccdc.ucsb.edu/">CCDC at UC Santa Barbara</a>.</p>
+<p><strong>June 2025</strong> I was faculty chair for this year’s <a href="https://sites.google.com/view/rsspioneers2025/home?authuser=0">RSS Pioneers workshop</a> in Los Angeles. After RSS, I was honored to present our latest research at the <a href="https://www.ccdc.ucsb.edu/">CCDC at UC Santa Barbara</a>. Thank you Tobia Marcucci for having me!</p>
 
-<p><strong>May 2025</strong> Visited Georgia Tech after ICRA 2025 in Atlanta and gave a talk in <a href="https://sites.gatech.edu/lunarlab/">Lunar lab</a>. Thank you, Lu Gan, for the the warm welcome!</p>
+<p><strong>May 2025</strong> Visited Georgia Tech after ICRA 2025 in Atlanta and gave a talk at the <a href="https://sites.gatech.edu/lunarlab/">Lunar Lab</a>. Thanks to Lu Gan for the invitation.</p>
 
-<p><strong>March 2025</strong> I will be presenting our latest research at the MIT JTL Urban Mobility Lab’s <a href="https://sites.mit.edu/jtl-seminar/">online research seminar series</a>.</p>
+<p><strong>March 2025</strong> Presented recent work at the MIT JTL Urban Mobility Lab <a href="https://sites.mit.edu/jtl-seminar/">online seminar series</a>.</p>
 
-<p><strong>February 2025</strong> Nice success for Marie Curie postdoctoral fellowships in our centre! The Inria Paris centre secured 3 projects, for Ajay Sathya (Willow), Frederik Kunstner (Sierra), and myself (Willow). This is a great recognition for the research we do here at Inria Paris on optimization, simulation, and robotics.</p>
+<p><strong>February 2025</strong> Nice success for Marie Curie postdoctoral fellowships in our centre. The Inria Paris centre secured three projects for Ajay Sathya (Willow), Frederik Kunstner (Sierra), and myself (Willow).</p>
 
-<p><strong>November 2024</strong> We organized a workshop on <a href="https://sites.google.com/seas.upenn.edu/corl-2024-workshop-diff/">Differentiable Optimization Everywhere</a> at CoRL 2024, taking place at TUM, Munich. Amazing speakers, a packed room throughout the day, and a social gathering in a Bavarian Biergarten, sponsored by Nvidia – it was a very fun event! The recordings are available <a href="https://www.youtube.com/@opt4rob">here</a>.</p>
+<p><strong>November 2024</strong> We organized the workshop on <a href="https://sites.google.com/seas.upenn.edu/corl-2024-workshop-diff/">Differentiable Optimization Everywhere</a> at CoRL 2024 in Munich. Amazing speakers, a packed room throughout the day, and a very fun social event. Recordings are available <a href="https://www.youtube.com/@opt4rob">online</a>.</p>
 
-<p><strong>November 2024</strong> It was a pleasure to collaborate with the Robotic Systems Lab at ETHZ on <a href="https://arxiv.org/abs/2411.03951">this summary paper</a> about continuous-time state estimation methods in robotics, in particular Gaussian-Process-based and spline-based methods, currently under review. Please get in touch if you have any comments!</p>
+<p><strong>November 2024</strong> It was a pleasure to collaborate with the Robotic Systems Lab at ETH Zurich on a <a href="https://arxiv.org/abs/2411.03951">summary paper</a> on continuous-time state estimation methods, currently under review. Please get in touch if you have comments!</p>
 
-<p><strong>July 2024</strong> We organized the first workshop on the <a href="https://sites.google.com/robotics.utias.utoronto.ca/frontiers-optimization-rss24/home">Frontiers of Optimization for Robotics</a> at RSS 2024, with a great lineup of speakers, contributors, and turnout of participants. All recordings of the workshop are available <a href="https://www.youtube.com/@opt4rob">online</a>.</p>
+<p><strong>July 2024</strong> We organized the first workshop on the <a href="https://sites.google.com/robotics.utias.utoronto.ca/frontiers-optimization-rss24/home">Frontiers of Optimization for Robotics</a> at RSS 2024, with a great lineup of speakers and participants. Recordings are available <a href="https://www.youtube.com/@opt4rob">online</a>.</p>
 
-<p><strong>June 2024</strong> We have created a <a href="assets/pdfs/summary_paper_2024.pdf">Summary paper</a> of our latest research on certifiably optimal estimation. It is intended as an entry point for anyone who wants to learn about this topic and for an overview of our recent advances in the area.  This paper will be presented at the <a href="https://sites.google.com/view/rss2024-safe-autonomy/">RSS 2024 Safe Autonomy Workshop</a>.</p>
+<p><strong>June 2024</strong> We released a <a href="assets/pdfs/summary_paper_2024.pdf">summary paper</a> on certifiably optimal estimation. It is intended as an entry point to the topic and an overview of our recent work.</p>
 
-<p><strong>May 2024</strong> Very grateful to be in this year’s cohort of <a href="https://sites.google.com/view/rsspioneers2024/">RSS Pioneers</a>!</p>
-
-<p><strong>May 2024</strong> I am delighted to begin my new appointment as starting researcher in the <a href="https://www.di.ens.fr/willow/">Willow research group</a> at Inria Paris, where I will be working with Justin Carpentier, Stéphane Caron and an amazing team of robotics/optimization researchers and engineers.</p>
+<p><strong>May 2024</strong> Very grateful that I was in this year’s cohort of <a href="https://sites.google.com/view/rsspioneers2024/">RSS Pioneers</a>!</p>
 
 <p><strong>March 2024 - April 2024</strong> I had the opportunity to visit the lab of Nicolas Boumal, EPFL, and Sylvain Calinon, IDIAP, Switzerland, giving talks about our work at both institutes, and getting to know a lot of cool new research! Thank you for hosting me!</p>
-
-<p><strong>March 2024</strong> Our full-day workshop on <a href="https://sites.google.com/robotics.utias.utoronto.ca/frontiers-optimization-rss24/home">Frontiers of optimization for robotics</a> was accepted for RSS 2024. Looking forward to a great lineup of speakers and a day full of interesting discussions!</p>
 
 <p><strong>November 2023</strong> Had the pleasure to be presenting our latest research at MIT, Harvard and Northeastern University during my tour of the vibrant Boston. The recording from my talk at MIT is available <a href="https://www.youtube.com/watch?v=KzTp3jQrM00">here</a> and the slides are available <a href="https://docs.google.com/presentation/d/e/2PACX-1vQ4JcmF12qCUjJacpTgdrZHj0emQiGN5_Jrm4EM0XxrZpBtGZoGbMXXC65zGf7AUJdIH-AV4W1ZvheF/pub?start=false&amp;loop=false&amp;delayms=30000">here</a>. Thank you to everyone for hosting me!</p>
 
